fix graphical glitch of xembed entries

Patch by Dmitry Ivanov
The fix is a very simple one-liner setting FullViewportUpdate mode for FdoGraphicsWidget. I'm aware FullViewportUpdate has negative performance impact but I also know it efficiently leaves out any graphical glitches happening due to no repaint of widget when necessary (which is what the bug is about).
BUG:317066
REVIEW:114910